# wasm-ml-benchmark

./: Cargo.toml  LICENSE  README.md
scripts/: .gitignore  benchmark.c  benchmark_wasm.c  build.c
scripts/binaries/: wasi-nn-module.wasm
src/: main.rs
wasm-module/: Cargo.toml
wasm-module/src/: main.rs
wasmtime-custom/: Cargo.toml  README.md  build.rs
wasmtime-custom/src/: main.rs
wasmtime-repo/crates/wasi-nn/: Cargo.toml
wasmtime-repo/crates/wasi-nn/src/backend/: onnxruntime.rs
